2013-10-16  Holger Seelig  <holger.seelig@yahoo.de>

	* TransformHandle.wrl: 

2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>

	* Phong.wrl:
	* TransformHandle.wrl: 

2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>

	* ScreenGroup.wrl:
	* TransformHandle.wrl: 

2013-10-13  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* Antialiasing.wrl:
	* index__6.T.wrl: 

2013-10-11  Holger Seelig  <holger.seelig@yahoo.de>

	* index.wrl: 

2013-10-09  Holger Seelig  <holger.seelig@yahoo.de>

	* Toon.wrl:
	* Phong.wrl:
	* OutlineEditor.wrl:
	* IndexedLineSet.wrl: 

2013-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-07  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-06  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-05  Holger Seelig  <holger.seelig@yahoo.de>

	* OutlineEditor.wrl: 

2013-10-04  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* info.wrl:
	* index.wrl:
	* hamburger.wrl:
	* labyrinth.wrl:
	* 4vong.wrl:
	* bicman.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index__5.wrl:
	* index__6.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* floor3.wrl:
	* index.wrl:
	* indexT.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl.gz:
	* astrnmy.wrl:
	* nistlogo.wrl:
	* index.wrl:
	* bic_aussen.wrl:
	* bic-wegweiser.wrl:
	* bic-wegweiser.T.wrl:
	* bic-musterbuero.wrl:
	* bic-wegweiser.wrl.gz: 

2013-10-03  Holger Seelig  <holger.seelig@yahoo.de>

	* Library.mdproj:
	* info.wrl:
	* buero.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* building.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl:
	* index.wrl: