@@ -1,3 +1,7 @@
+2013-10-16  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Box3.h: 
+
 2013-10-09  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Env.h:
