@@ -2,6 +2,10 @@
 
 	* TransformHandle.wrl: 
 
+2013-10-16  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* TransformHandle.wrl: 
+
 2013-10-15  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Phong.wrl:
